# real-world-conduit

./: Makefile  README.md  real-world-conduit.cabal
app/: Main.hs
front/: index.html
src/: Conf.hs  DevelMain.hs  Lib.hs  Model.hs  RealWorld.hs  Types.hs  Util.hs
src/API/: Articles.hs  Profile.hs  Tags.hs  User.hs
src/Coach/: Articles.hs  Profile.hs  Tags.hs  Users.hs
src/Lib/: Prelude.hs
src/Que/: Articles.hs  Comments.hs  Tags.hs  Users.hs
