name:                real-world-conduit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ibnuda/real-world-conduit#readme
license:             BSD3
license-file:        LICENSE
author:              Ibnu D. Aji
maintainer:          ibnudaruaji@outlook.co.id
copyright:           2018 Ibnu D. Aji
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Types
                     , Conf
                     , Model
                     , API.User
                     , API.Articles
                     , API.Profile
                     , API.Tags
                     , Que.Tags
                     , Coach.Tags
                     , RealWorld
                     , DevelMain
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , aeson >= 1.2
                     , aeson-casing >= 0.1
                     , bcrypt >= 0.0
                     , bytestring >= 0.10
                     , esqueleto
                     , foreign-store >= 0.2
                     , jose
                     , monad-logger >= 0.3
                     , persistent >= 2.8
                     , persistent-postgresql >= 2.8
                     , persistent-template >= 2.5
                     , regex-compat >= 0.95
                     , servant-auth
                     , servant-auth-client
                     , servant-auth-server
                     , servant-server >= 0.13
                     , text
                     , time >= 1.8
                     , wai >= 3.2
                     , warp >= 3.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , NoImplicitPrelude
  ghc-options:         -Wall

executable real-world-conduit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , real-world-conduit
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite real-world-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , real-world-conduit
                     , protolude
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/ibnuda/real-world-conduit
